--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/paramsTest.html
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/paramsTest.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>paramsTest</title>
 </head>
 <body>
-hello，你好！！！！
+paramsTest!!!!!
 </body>
 </html>
