--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
@@ -16,6 +16,8 @@
 <a th:href="@{/getParams3(password=55552565)}">getParams的参数获取 测试RequestParam的用法,不写某个字段</a><br/>
 <a th:href="@{/getParams4}">getParams的参数获取 测试RequestHeader的用法</a><br/>
 
+<a th:href="@{/ScopeTest}">/ScopeTest</a><br/>
+
 <h2>测试表单</h2>
 <form th:action="@{/getparamPOJO}" method="get">
     用户名：<input type="text" name="user_name"><br>
