--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
@@ -17,6 +17,8 @@
 <a th:href="@{/getParams4}">getParams的参数获取 测试RequestHeader的用法</a><br/>
 
 <a th:href="@{/ScopeTest}">/ScopeTest</a><br/>
+<HR>
+<a th:href="@{/restIndex}">/restIndex</a><br/>
 
 <h2>测试表单</h2>
 <form th:action="@{/getparamPOJO}" method="get">
