--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/templates/index.html
@@ -54,6 +54,8 @@
         <button type="submit" value="上传">提交</button>
     </form>
 </div>
+<hr>
+<a th:href="@{/ExceptionTest}">测试异常处理 ExceptionTest</a><br>
 
 <script type="text/javascript">
     var vue = new Vue({
